<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d_braze_background"
    tools:context=".presentation.ui.activities.DBrazeStartActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcomeImage"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/d_braze_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/lets_get_started"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcomeSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/d_braze_black_shade"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:maxLines="3"
        android:paddingStart="@dimen/padding_4dp"
        android:paddingEnd="@dimen/padding_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:textSize="@dimen/text_size_24sp"
        android:gravity="center"
        android:backgroundTint="@color/d_braze_primary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/d_braze_light_grey"
        android:textSize="@dimen/text_size_24sp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_89dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>