<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d_braze_background"
    tools:context=".presentation.ui.activities.DBrazeStartActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_35dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_44dp"
        android:text="@string/welcome"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:lineSpacingExtra="2dp"
        android:maxLines="2"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/d_braze_black_shade"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:text="@string/email"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        style="@style/CustomTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:text="@string/password"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        style="@style/CustomTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:passwordToggleDrawable="@drawable/ic_eye"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/forget_password"
        android:textColor="@color/d_braze_blue"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/d_braze_primary"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not__have_an_account"
            android:textColor="@color/d_braze_blue"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/d_braze_blue"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/do_not_have_account"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>