<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/d_braze_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpPersonalInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding_63dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backSignUp"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30dp"
                android:layout_marginStart="@dimen/margin_32dp"
                android:gravity="center"
                android:text="@string/personal_information"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backSignUp"
                app:layout_constraintStart_toEndOf="@+id/backSignUp"
                app:layout_constraintTop_toTopOf="@+id/backSignUp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/full_name"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/email"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullNameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/gender"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:focusable="false"
                    android:hint="@string/gender_hint"
                    android:inputType="none"
                    android:padding="@dimen/padding_16dp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/height"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderInputLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeightUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2dp"
                android:text="@string/cm"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHeight"
                app:layout_constraintStart_toEndOf="@+id/tvHeight"
                app:layout_constraintTop_toTopOf="@+id/tvHeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/height_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/weight"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heightInputLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeightUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2dp"
                android:text="@string/kg"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvWeight"
                app:layout_constraintStart_toEndOf="@+id/tvWeight"
                app:layout_constraintTop_toTopOf="@+id/tvWeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/weight_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:text="@string/date_of_birth_hint"
                android:textColor="@color/d_braze_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weightInputLayout" />

            <TextView
                android:id="@+id/dateOfBirthInputLayout"
                android:background="@drawable/round_corners_bg"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_vertical"
                android:hint="@string/date_of_birth"
                android:paddingStart="@dimen/padding_15dp"
                android:paddingEnd="@dimen/padding_15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDateOfBirth"/>



            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginTop="@dimen/margin_50dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:backgroundTint="@color/d_braze_primary"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirthInputLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/setPasswordView"
            layout="@layout/set_password_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
